--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=g, initial-scale=1.0">
     <title>Document</title>
+    <h1>
+        hi everyone
+    </h1>
 </head>
 
 <body>
