--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=g, initial-scale=1.0">
     <title>Document</title>
     <h1>
-        hi everyone
+        hi everyone 
+        how was your day 
     </h1>
 </head>
 
