logo update and name on login page

--- a/login-page.html
+++ b/login-page.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>suviri login page</title>
+    <link rel="icon" type="image/png" href="r.png">
     <style>
         /* Body style with background image */
         body {
@@ -11,7 +12,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url('https://www.bing.com/images/search?view=detailV2&ccid=QaS9ZgnU&id=C11B1CF33B33F3C9F446AEE88AA2B6ADE1F19506&thid=OIP.QaS9ZgnU3LomnLb910WHDQHaHa&mediaurl=https%3A%2F%2Fwallpaperaccess.com%2Ffull%2F1564141.jpg&exph=1600&expw=1600&q=shiv+image&simid=607986101032608166&FORM=IRPRST&ck=370240A8AAF4EDA57EAA0AE2CADF749A&selectedIndex=0&itb=0&cw=1145&ch=535&ajaxhist=0&ajaxserp=0'); /* Replace with the image URL */
+            background-image: url(''); /* Replace with the image URL */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -21,7 +22,7 @@
 
         /* Container for login form */
         .login-container {
-            background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+            background-color: rgba(207, 179, 179, 0.8); /* Semi-transparent background */
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -32,7 +33,7 @@
 
         /* Heading style (Shiv text above form) */
         .login-container h1 {
-            color: #333;
+            color: #8b5b2b;
             font-size: 30px;
             font-family: 'Courier New', Courier, monospace;
             margin-bottom: 20px;
@@ -52,7 +53,7 @@
             width: 100%;
             padding: 10px;
             margin-top: 5px;
-            border: 1px solid #ccc;
+            border: 1px solid #100e0e;
             border-radius: 4px;
             font-size: 14px;
         }
@@ -60,9 +61,9 @@
         input[type="submit"] {
             width: 100%;
             padding: 10px;
-            background-color: #4CAF50;
+            background-color: #5db780;
             border: none;
-            color: white;
+            color: rgb(237, 198, 225);
             font-size: 16px;
             border-radius: 4px;
             cursor: pointer;
@@ -90,7 +91,7 @@
 <body>
 
     <div class="login-container">
-        <h1>Shiv</h1>
+        <h1>suviri</h1>
         <form action="/submit-login" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
