color and background photo of login page is changed

--- a/login-page.html
+++ b/login-page.html
@@ -12,7 +12,7 @@
             margin: 0;
             padding: 0;
             height: 100vh;
-            background-image: url(''); /* Replace with the image URL */
+            background-image: url('bg1.png'); /* Replace with the image URL */
             background-size: cover;
             background-position: center;
             display: flex;
@@ -22,7 +22,7 @@
 
         /* Container for login form */
         .login-container {
-            background-color: rgba(207, 179, 179, 0.8); /* Semi-transparent background */
+            background-color: rgba(87, 83, 77, 0.8); /* Semi-transparent background */
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
@@ -33,9 +33,9 @@
 
         /* Heading style (Shiv text above form) */
         .login-container h1 {
-            color: #8b5b2b;
+            color: #0a0909;
             font-size: 30px;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             margin-bottom: 20px;
         }
 
@@ -91,7 +91,7 @@
 <body>
 
     <div class="login-container">
-        <h1>suviri</h1>
+        <h1>LoginLane</h1>
         <form action="/submit-login" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
