--- a/front_page.html
+++ b/front_page.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -80,8 +79,10 @@
 
     <div class="container">
         <h1>Welcome to Our Website</h1>
-        <a href="/login" class="btn">Login</a>
-        <a href="/signup" class="btn">Sign Up</a>
+        <a href="login-page.html" class="btn">Login</a>
+        <a href="" class="btn">Sign Up</a>
+        <a href="email.html" class="btn">Email Login</a> <!-- New Button Added -->
+        
         <p>Need help? <a href="/contact">Contact Us</a></p>
     </div>
 
